Optimisation du code + passage à java 10